--- a/src/main/resources/apllication.yml
+++ b/src/main/resources/apllication.yml
@@ -1,7 +1,7 @@
 server:
-  port: 8081
+  port: 8089
 
 spring:
   data:
     mongodb:
-      uri: mongodb://admin:admin123@localhost:27017/lotto
+      uri: mongodb://admin:admin@localhost:27017/lotto
