--- a/src/main/resources/apllication.yml
+++ b/src/main/resources/apllication.yml
@@ -1,7 +1,27 @@
-server:
-  port: 8089
-
 spring:
+  main:
+    allow-bean-definition-overriding: true
   data:
     mongodb:
-      uri: mongodb://admin:admin@localhost:27017/lotto
+      uri: mongodb://${MONGO_USER}:${MONGO_PASSWORD}@${MONGO_HOST}:${MONGO_PORT}/${MONGO_DB_NAME}?authSource=${MONGO_AUTH_SOURCE}
+      auto-index-creation: true
+  mvc:
+    pathmatch:
+      matching-strategy: ANT_PATH_MATCHER
+
+lotto:
+  result-checker:
+    lotteryRunOccurrence: "0 55 11 * * 6"
+  number-generator:
+    lotteryRunOccurrence: "0 0 12 * * 6"
+    facade:
+      count: 25
+      lowerBand: 1
+      upperBand: 99
+    http:
+      client:
+        config:
+          uri: http://ec2-3-120-147-150.eu-central-1.compute.amazonaws.com
+          port: 9090
+          connectionTimeout: 5000
+          readTimeout: 5000
