--- a/src/main/resources/apllication.yml
+++ b/src/main/resources/apllication.yml
@@ -1,9 +1,12 @@
+server:
+  port: 8081
+
 spring:
   main:
     allow-bean-definition-overriding: true
   data:
     mongodb:
-      uri: mongodb://${MONGO_USER}:${MONGO_PASSWORD}@${MONGO_HOST}:${MONGO_PORT}/${MONGO_DB_NAME}?authSource=${MONGO_AUTH_SOURCE}
+      uri: mongodb://admin:admin@localhost:8081/lotto
       auto-index-creation: true
   mvc:
     pathmatch:
