--- a/src/main/resources/apllication.yml
+++ b/src/main/resources/apllication.yml
@@ -17,10 +17,6 @@ lotto:
     lotteryRunOccurrence: "0 55 11 * * 6"
   number-generator:
     lotteryRunOccurrence: "0 0 12 * * 6"
-    facade:
-      count: 25
-      lowerBand: 1
-      upperBand: 99
     http:
       client:
         config:
@@ -28,3 +24,8 @@ lotto:
           port: 9090
           connectionTimeout: 5000
           readTimeout: 5000
+  number-receiver:
+    facade:
+      count: 6
+      lowBound: 1
+      highBound: 99
